--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e00fd237-8e6d-49a3-8fb5-08e694cdb7d6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
