--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~11.1.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.1",
     "bootstrap": "^4.6.0",
+    "ng2-bootstrap": "^1.6.3",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-tabset": "^2.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
