--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-tabset": "^2.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typeface-muli": "^1.1.13",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
