Fix: Add New patient Register

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.0",
+    "@angular/animations": "^11.1.2",
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
@@ -23,7 +23,10 @@
     "bootstrap": "^4.6.0",
     "ng2-bootstrap": "^1.6.3",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^10.0.1",
     "ngx-tabset": "^2.2.0",
+    "ngx-toastr": "^13.2.0",
+    "ngx-toggle-switch": "^2.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typeface-muli": "^1.1.13",
