--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.1.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "ng2-bootstrap": "^1.6.3",
     "ngx-bootstrap": "^6.2.0",
     "ngx-tabset": "^2.2.0",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1101.1",
     "@angular/cli": "~11.1.1",
     "@angular/compiler-cli": "~11.1.0",
+    "@types/chart.js": "^2.9.30",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
