--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.1",
     "bootstrap": "^4.6.0",
     "ng2-bootstrap": "^1.6.3",
+    "ngx-avatar": "^4.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-tabset": "^2.2.0",
     "rxjs": "~6.6.0",
