--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "ng2-bootstrap": "^1.6.3",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^10.0.1",
     "ngx-tabset": "^2.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
