--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.1",
-    "@angular/cdk": "^11.2.1",
-    "@angular/cli": "^11.2.1",
+    "@angular/cdk": "^11.0.0",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "^11.2.1",
@@ -21,15 +20,19 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@nebular/eva-icons": "7.0.0",
     "@nebular/theme": "^7.0.0",
+    "eva-icons": "^1.1.2",
     "rxjs": "~6.6.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.0",
+    "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "~11.2.1",
     "@angular/language-service": "~11.2.1",
+    "@schematics/angular": "^11.2.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
