--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.1",
     "@nebular/eva-icons": "7.0.0",
     "@nebular/theme": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^5.0.0-beta2",
     "eva-icons": "^1.1.2",
     "rxjs": "~6.6.3",
