--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@nebular/eva-icons": "7.0.0",
     "@nebular/theme": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^2.9.4",
-    "eva-icons": "^1.1.2",
+    "eva-icons": "^1.1.3",
     "moment": "^2.29.1",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.3",
