--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/@nebular/theme/styles/prebuilt/default.css"
+              "node_modules/@nebular/theme/styles/prebuilt/default.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
               
             ],
             "scripts": []
