--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.1",
     "@datorama/akita": "^5.3.0",
     "@datorama/akita-ng-entity-service": "^5.0.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@nebular/eva-icons": "7.0.0",
     "@nebular/theme": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
