--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "remote-patient-monitoring",
-  "version": "0.0.0",
+  "version": "2.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "ng build --prod --base-href=/rpm/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
