--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "remote-patient-monitoring",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build --prod --base-href=/rpm/",
+    "start": "ng serve --proxy-config proxy.conf.json --base-href=/rpm/",
+    "build": "ng build --prod --baseHref=/rpm/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -30,6 +30,7 @@
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^2.9.4",
     "eva-icons": "^1.1.3",
+    "http-server": "^0.12.3",
     "moment": "^2.29.1",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.3",
