--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "remote-patient-monitoring",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json --base-href=/rpm/",
-    "build": "ng build --prod --baseHref=/rpm/",
+    "build": "ng build --source-map=true --base-href=/rpm/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
