--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@datorama/akita-ng-entity-service": "^5.0.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@nebular/auth": "^7.0.0",
+    "@nebular/date-fns": "^7.0.0",
     "@nebular/eva-icons": "7.0.0",
     "@nebular/theme": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
@@ -32,6 +33,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^2.9.4",
+    "date-fns": "^2.17.0",
     "eva-icons": "^1.1.3",
     "http-server": "^0.12.3",
     "moment": "^2.29.1",
