--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eva-icons": "^1.1.3",
     "http-server": "^0.12.3",
     "moment": "^2.29.1",
+    "ng-http-loader": "^9.1.0",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.3",
     "tslib": "^1.10.0",
