--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@angular/service-worker": "^11.2.1",
     "@datorama/akita": "^5.3.0",
     "@datorama/akita-ng-entity-service": "^5.0.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
