--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.29.1",
     "ng-http-loader": "^9.1.0",
     "ng2-charts": "^2.4.2",
+    "ngx-avatar": "^4.0.0",
     "ngx-daterange": "^1.0.43",
     "rxjs": "~6.6.3",
     "tslib": "^1.10.0",
