--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^2.17.0",
     "eva-icons": "^1.1.3",
     "http-server": "^0.12.3",
+    "husky": "^5.1.3",
     "moment": "^2.29.1",
     "ng-http-loader": "^9.1.0",
     "ng2-charts": "^2.4.2",
@@ -70,5 +71,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
