--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eva-icons": "^1.1.3",
     "http-server": "^0.12.3",
     "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
+    "moment-timezone": "^0.5.27",
     "ng-http-loader": "^9.1.0",
     "ng2-charts": "^2.4.2",
     "ngx-avatar": "^4.0.0",
