wip: UI and routing for dashboard module

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@swimlane/ngx-datatable": "^19.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^2.9.4",
@@ -42,6 +43,8 @@
     "moment-timezone": "^0.5.27",
     "ng-http-loader": "^9.1.0",
     "ng2-charts": "^2.4.2",
+    "ng2-completer": "^9.0.1",
+    "ng2-smart-table": "^1.7.2",
     "ngx-avatar": "^4.0.0",
     "ngx-daterange": "^1.0.43",
     "ngx-order-pipe": "^2.1.1",
