--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ngx-order-pipe": "^2.1.1",
     "rxjs": "~6.6.3",
     "tslib": "^1.14.1",
+    "underscore": "^1.12.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
