--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ngx-avatar": "^4.0.0",
     "ngx-daterange": "^1.0.43",
     "ngx-order-pipe": "^2.1.1",
+    "ngx-timer": "^1.0.6",
     "rxjs": "~6.6.3",
     "tslib": "^1.14.1",
     "underscore": "^1.12.1",
