--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "^11.2.1",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.1",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
@@ -37,6 +38,7 @@
     "chart.js": "^2.9.4",
     "date-fns": "^2.17.0",
     "eva-icons": "^1.1.3",
+    "firebase": "^8.3.1",
     "http-server": "^0.12.3",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
