--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@swimlane/ngx-datatable": "^19.0.0",
+    "@types/moment-duration-format": "^2.2.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^2.9.4",
@@ -41,6 +42,7 @@
     "firebase": "^8.3.1",
     "http-server": "^0.12.3",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.27",
     "ng-http-loader": "^9.1.0",
