fix: meet components

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@opentok/client": "^2.19.2",
     "@swimlane/ngx-datatable": "^19.0.0",
     "@types/moment-duration-format": "^2.2.2",
     "angular-font-awesome": "^3.1.2",
@@ -55,7 +56,7 @@
     "ngx-timer": "^1.0.6",
     "rxjs": "~6.6.3",
     "screenfull": "^5.1.0",
-    "tslib": "^1.14.1",
+    "tslib": "^2.1.0",
     "underscore": "^1.12.1",
     "zone.js": "~0.11.4"
   },
